kubernetes-templating/frontend/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
  name: hupster-shop-ingress
spec:
  ingressClassName: traefik
  rules:
  - host: shop.62.84.112.166.nip.io
    http:
      paths:
      - backend:
          service:
            name: frontend-service
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - shop.62.84.112.166.nip.io
    secretName: harbor-ingress
